# email-triage-openenv

./: .gitignore  Dockerfile  README.md  analytics.py  app.py  baseline.py  demo_app.py  graders.py  inference.py  llm_agent.py  logger.py  openenv.yaml  pyproject.toml  report.py  requirements.txt  tasks.json  tasks.py
email_triage_openenv/: __init__.py  env.py  grader.py  graders.py  models.py  tasks.py
env/: __init__.py  graders.py  tasks.py
server/: __init__.py  app.py
